# Modular-Template

./: .cursorrules  BACKEND_ENV_SETUP.md  CONTRIBUTING.md  DOCKER_COMPOSE_GUIDE.md  EXAMPLES.md  INTEGRATION_SETUP.md  README.md  docker-compose.backend-only.yml  docker-compose.complete.yml  docker-compose.frontend-b4f.yml  docker-compose.frontend-backend.yml  docker-compose.frontend1-b4f-auth.yml  docker-compose.frontend1-b4f.yml  docker-compose.frontend2-standalone.yml  docker-compose.frontend3-b4f1.yml  docker-compose.frontend4-standalone.yml  docker-compose.frontend5-standalone.yml  docker-compose.standard.yml  docker-compose.yml  jest.config.js
b4f/: .env.example  .eslintrc.js  .gitignore  Dockerfile  README.md  jest.setup.js  package.json  swagger.json  tsconfig.json
b4f1/: .env.example  Dockerfile  README.md  eslint.config.mjs  package.json  tsconfig.json
backend/: .coverage  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  config.py  database.py  main.py  pyproject.toml  requirements.txt  test.db  test_integration.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 03180c3b47a8_initial_migration.py  32298309fcd3_add_orders_and_payment_models_v2.py  6274aa0acfb3_add_orders_and_payment_models.py
backend/models/: __init__.py  orders.py
backend/routers/: __init__.py  payments.py  users.py
backend/schemas/: __init__.py  orders.py
backend/services/: stripe_service.py
backend/test/: README.md  test_users.py
backend/users/: models.py  routers.py  schemas.py
backend/utils/: auth.py  enums.py  logger.py
backend1/: README.md
backend2/: README.md
frontend/: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  Test.md  env.md  eslint.config.js  index.html  package.json  tailwind.config.js  (+3 more)
(+192 files in other folders)
